# codekiln

./: .env.example  .gitignore  .mise.toml  Dockerfile  Dockerfile.lifegame  INSTALLATION.md  README.md  USAGE.md  conway-bio.py  plan.mdc  pyproject.toml  requirements.txt  setup.py
.ai-coding/: todo.md
.cursor/rules/: cursor-project-rule-editor.mdc  plan.mdc  spec.mdc
.github/workflows/: build-image.yml  conway-bio.yml  lifegame-tests.yml
lifegame/: .mise.toml  Dockerfile  README.md  pyproject.toml
lifegame/lifegame/: __init__.py  bio.py  cli.py  constants.py  game.py  sextant_grid.py
lifegame/research/: Increased_Resolution.md  expanded_space_search.html  find_blank.html  get_sextant_chars.html  half_width_render_harness.html  sample_chars.txt  sextant_resolution.md  standard_width_groups.html
lifegame/tests/: test_bio.py  test_game.py  test_package.py
lifegame/utils/: groups_of_widths.html  render_test.html  sample_chars.txt  test_pairs_triplets.html
